<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_new"
        android:orderInCategory="100"
        android:icon="@drawable/ic_create"
        android:title="@string/action_new"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:icon="@drawable/ic_save"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom"
        android:actionProviderClass="android.widget.ShareActionProvider"/>

    <item
        android:id="@+id/action_load"
        android:orderInCategory="100"
        android:icon="@drawable/ic_file_download"
        android:title="@string/action_load"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_upload"
        android:orderInCategory="100"
        android:title="@string/action_upload"
        android:icon="@drawable/ic_file_upload"
        app:showAsAction="ifRoom" />



    <!--<item-->
    <!--android:id="@+id/action_settings"-->
    <!--android:orderInCategory="100"-->
    <!--android:title="@string/action_settings"-->
    <!--app:showAsAction="never" />-->

    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>
