<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="2dp"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:layout_marginTop="2dp"
    android:orientation="vertical"
    android:paddingTop="10dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/dialog_new_ensemble"
        android:textColor="@color/green_afrostudio"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray" />


    <TextView
        android:id="@+id/repetitionsSeekBarText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/dialog_time_signature"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/time_signature_rgroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:checkedButton="@+id/beatsPerBar16"
        android:gravity="center"
        android:measureWithLargestChild="false"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/beatsPerBar16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="0dp"
            android:text="@string/dialog_beatsPerBar16"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/beatsPerBar12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="0dp"
            android:text="@string/dialog_beatsPerBar12"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/beatsPerBar9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="0dp"
            android:text="@string/dialog_beatsPerBar9"
            android:textSize="18sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/bar_number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/dialog_bar_number"
            android:textSize="18sp" />

        <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bar_number_seekbar"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

    <!--<CheckBox-->
        <!--android:id="@+id/dialog_default_instruments"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:layout_marginBottom="10dp"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_marginStart="10dp"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:checked="false"-->
        <!--android:text="@string/dialog_default_instruments"-->
        <!--android:textSize="@dimen/abc_text_size_medium_material" />-->

</LinearLayout>