<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="2dp"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:layout_marginTop="2dp"
    android:orientation="vertical"
    android:paddingTop="10dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/dialog_instrument_options"
        android:textColor="@color/green_afrostudio"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/instrument_options_rgroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checkedButton="@+id/clear_instrument"
                android:measureWithLargestChild="false"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/clear_instrument"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="50dp"
                    android:text="@string/dialog_clear_instrument"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <RadioButton
                    android:id="@+id/remove_instrument"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="0dp"
                    android:paddingLeft="50dp"
                    android:text="@string/dialog_remove_instrument"
                    android:textSize="@dimen/abc_text_size_medium_material" />
            </RadioGroup>

            <TextView
                android:id="@+id/bar_number_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/dialog_volume"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/volume_seekbar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <CheckBox
                android:id="@+id/dialog_enabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text="@string/dialog_enabled"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>