<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/black">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo_about"
        android:src="@drawable/logo_about"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/dialog_about1"
        android:layout_gravity="left|bottom"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/dialog_about2"
        android:layout_gravity="right|bottom"
        android:textColor="@color/white" />

    <ScrollView
        android:visibility="invisible"
        android:id="@+id/about_scroll"
        android:background="@color/black_transp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="50dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dp"
            android:text="@string/about_afrostudio"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:shadowColor="@color/gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="0.01"
            />

    </ScrollView>


</FrameLayout>