<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="2dp"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:layout_marginTop="2dp"
    android:orientation="vertical"
    android:paddingTop="10dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/dialog_add_instrument"
        android:textColor="@color/green_afrostudio"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray" />


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/dialog_add_instrument_Shekere"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="0dp"
                    android:paddingLeft="50dp"
                    android:text="@string/dialog_add_instrument_Shekere"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ico_shek"
                    android:tint="@color/green_afrostudio" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/dialog_add_instrument_Balet"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="0dp"
                    android:paddingLeft="50dp"
                    android:text="@string/dialog_add_instrument_Balet"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ico_balet"
                    android:tint="@color/green_afrostudio" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/dialog_add_instrument_Dundun"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="0dp"
                    android:paddingLeft="50dp"
                    android:text="@string/dialog_add_instrument_Dundun"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ico_dun"
                    android:tint="@color/green_afrostudio" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/dialog_add_instrument_Sagbang"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="0dp"
                    android:paddingLeft="50dp"
                    android:text="@string/dialog_add_instrument_Sagbang"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ico_sag"
                    android:tint="@color/green_afrostudio" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/dialog_add_instrument_Kenkeny"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="0dp"
                    android:paddingLeft="50dp"
                    android:text="@string/dialog_add_instrument_Kenkeny"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ico_ken"
                    android:tint="@color/green_afrostudio" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/dialog_add_instrument_Djembe"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="3dp"
                    android:paddingLeft="50dp"
                    android:text="@string/dialog_add_instrument_Djembe"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ico_djembe"
                    android:tint="@color/green_afrostudio" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>